--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Color Game</title>
+	<title>Color Games</title>
 	<link rel="stylesheet" type="text/css" href="/Users/ttamnam/Desktop/Sublime Text/bootstrap-4.4.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
