--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="square" style="background-color: rgb(125, 200, 50);"></div>
     <p>Example: RGB(125, 200, 50)</p>
 
-    <button onclick="hidePopup()">Start</button>
+    <button onclick="hidePopup(); init();">Start</button>
   </div>
 </div>
 
