--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ol>
 
     <!-- Example square with RGB value -->
-    <div class="square" style="background-color: rgb(125, 200, 50);"></div>
+    <div class="xsquare" style="background-color: rgb(125, 200, 50);"></div>
     <p>Example: RGB(125, 200, 50)</p>
 
     <button onclick="hidePopup()">Start</button>
