--- a/index.html
+++ b/index.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Color Game</title>
+	<title>Color Games</title>
 	<link rel="stylesheet" type="text/css" href="/Users/ttamnam/Desktop/Sublime Text/bootstrap-4.4.1-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
-	<button onclick="showPopup()">Instructions</button>
-
-<!-- The overlay and popup content -->
-	<div class="overlay" id="overlay">
-  <div class="popup">
-    <p>Welcome to the RGB Color Game!</p>
-    <p>How to play:</p>
-    <ol>
-      <li>RGB color values represent the intensity of red, green, and blue in a color.</li>
-      <li>An RGB value is usually written as rgb(red, green, blue), where each component is a number from 0 to 255.</li>
-      <li>Your task is to select the color that matches the RGB value displayed.</li>
-    </ol>
-
-    <!-- Example square with RGB value -->
-    <div class="xsquare" style="background-color: rgb(125, 200, 50);"></div>
-    <p>Example: RGB(125, 200, 50)</p>
-
-    <button onclick="hidePopup()">Start</button>
-  </div>
-</div>
 	<div class="d-flex justify-content-center">
 		<h1 class="flex-grow-1">
 			The Great 
