--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </ol>
 
     <!-- Example square with RGB value -->
-    <p>Example: RGB(125, 200, 50)</p>
+    <p>Example: RGB(10, 200, 10)</p>
+	<div style="example"></div>
+
 
     <button onclick="hidePopup()">Start</button>
   </div>
