--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Example square with RGB value -->
     <p>Example: RGB(10, 200, 10)</p>
-	<div style="example"></div>
+	<div class="example"></div>
 
 
     <button onclick="hidePopup()">Start</button>
