--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <!-- Example square with RGB value -->
     <p>Example: RGB(10, 200, 10)</p>
+	  <div id="container">
 	<div class="example"></div>
+	  </div>
 
 
     <button onclick="hidePopup()">Start</button>
