--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 	  </div>
 
 
-    <button onclick="hidePopup()">Start</button>
+    <div class="justify-content-center" id="stripe" style="">
+	    <button onclick="hidePopup()">Start</button>
+    </div>
   </div>
 </div>
 	<div class="d-flex justify-content-center">
